--- a/src/app/events/CricketMatch/employee-page/employee-page.component.html
+++ b/src/app/events/CricketMatch/employee-page/employee-page.component.html
@@ -4,6 +4,7 @@
 
 
 
+<app-sidenavbar></app-sidenavbar>
 <div id="back">
         
     <div *ngIf="!IsLogin" class="wrapper fadeInDown col-md-12 container">
