--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -23,8 +23,9 @@
             Menu
           </button>
           <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <a class="dropdown-item" href="pastevent/imageview/3"> Blood Donation</a>
+            <a class="dropdown-item" href="pastevent/imageview/1"> Blood Donation</a>
             <a class="dropdown-item" href="pastevent/imageview/2"> Cricket Match</a>
+            <a class="dropdown-item" href="pastevent/imageview/3"> Annual trip</a>
             <a class="dropdown-item" href="pastevent/budget">Budget</a>
           </div>
         </div>
