--- a/src/app/events/view-event-page/view-event-page.component.css
+++ b/src/app/events/view-event-page/view-event-page.component.css
@@ -1,147 +1,176 @@
-#image{
-    width: 100%;
-   
-   
-    
-}
-
-#sticky{
-    
-    position:fixed;
-    top: 0;
-    z-index: -99; 
-  
-    height: 60%;
-    width: 100%
-    
-
-}
-
-#note{
-    background-color:rgb(115, 120, 122);
-    font-family: Arial;
-    font-size: 10px
-    
-    
-}
 
 
-
-#cimage:hover {
-    -ms-transform: scale(1.2); /* IE 9 */
-    -webkit-transform: scale(1.2); /* Safari 3-8 */
-    transform: scale(1.2); 
-    max-height: 100%;
-    max-width: 100%;
-    transition:0.8s;
-    overflow: hidden;
-}
-#cimage{
-    overflow: hidden;
-    height: 160px;
-}
-
-#wrapper { 
-    position:absolute;
-    height:100%;
-    width:100%;
-}
- 
-.panels { 
-    position:relative;
-    height:40%;
-    min-height:40%;
-    width:100%;
-    z-index:100;
-   
-}
-
-#b{ 
-    margin-top:65%;
-    font-family: Verdana;
-    font-size: 20px;
-    
- }
- #second{
-    margin-top:0%;
-    font-size: 60px;
-    color: rgb(255, 255, 255);
-    font-family: Verdana;
-    
-   
- }
-
- 
-
- #forth{
-    margin-top:80%;
-    font-size: 60px;
-    color: rgb(255, 255, 255);
-    
-    min-height: 10; 
-    max-height: 10;
-   
- }
-#forthNote{
-    background-color: white
-}
-
-
- #secondNote{
-   
+#homeback{
+    background-image: url("https://images.trvl-media.com/hotels/16000000/15860000/15850600/15850579/ca0c9ccb_z.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     text-align: center;
-    background-color: black;
-    opacity: 0.7;
+    
+}
+#part0{
+   background-color: rgba(0, 0, 0, 0.5);
+   height: 750px;
+}
+#mainH{
+    width: 40%;
+    margin-left: 10%;
+    border:solid 8px
+    
+}
+#part1{
+    background-color: rgba(196, 199, 199, 0.671);
+    height: 750px;
+    padding: 20px;
+    
  }
- #inside{
-     font-size: 20px;
-     text-align: left;
+ #part2{
+    background-color: rgba(252, 246, 246, 0.904);
+    height: 750px;  padding: 20px;
  }
-
- a{text-decoration: none;
-    color: rgb(48, 43, 43)
+ #part3{
+    background-color: rgba(247, 247, 247, 0.877);
+    height: 750px;  padding: 20px;
+ }
+ #part0 h1{
+     color: rgb(196,199,199);
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+     text-align: center;
+     font-size: 100px;
+     font-weight: bold;
+     position: relative;
+     -webkit-animation: mymove 10s 1; /* Safari 4.0 - 8.0 */
+        animation: mymove 10s 10;
+        animation-direction: alternate;
+ }
+ /* @-webkit-keyframes mymove {
+    from {top: 100px; color: rgb(196,199,199);}
+    to {top: 300px; color:rgb(165, 165, 165);}
 }
 
-a:hover{
-    text-decoration: none;
-    color:rgb(48, 43, 43)
-}
-
-.card:hover{
-box-shadow: 0 20px 30px 0 rgba(0,0,0,0.2);
-transition:0.5s;
-width:40%;
-text-decoration: none;
-overflow: hidden;
-}
-
-
-.card {
-    margin: 0 auto; /* Added */
-    float: none; /* Added */
-    overflow: hidden;
-}
-/*
-#a{ 
-    background:#eee;
-    position:fixed;
-    color:red;
-    top:0;
-    left:0;
-   
-    z-index: -99; 
-}
-
-
-#b{ 
-   margin-top:100%;
-   background:yellow;
-}
-
-#c{
-   background:pink;
-}
-
-#d{
-   background:green;
+@keyframes mymove {
+    from {top: 100px;color: rgb(196,199,199); }
+    to {top: 300px; color: rgb(165,165,165);}
 }*/
+#title{
+    color: azure;
+}
+#backCard{ 
+    width: 100%; height: 100%;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+#backCard h1{
+    text-align: center;
+    transition: 0.5s all ease-in-out;
+    
+}
+#backCard h1:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    transform: scale(1.05);
+}
+#center{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+}
+
+#body .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#cardDesk img{
+    
+    margin-left: 10%    
+ }
+  #cardDesk{
+     
+     margin-top: 0;
+
+ 
+ } 
+ .row{
+     padding-top: 5%
+      }
+ 
+ #cardDesk .card {
+     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+     transition: 0.5s all ease-in-out;
+     width: 20%;
+     height: 20%;
+
+     /* border-bottom-left-radius: 30%; */
+     /* border-top-right-radius: 30%; */
+ }
+/* #card1{
+    top: 0em;
+}
+#card2{
+    top: 5em;
+}
+#card3{
+    top: 10em;
+} */
+
+/*card deck css*/
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  .marketing h2 {
+    font-weight: 400;
+  }
+  .marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
+  }
+  
+
+#cardDesk .card:hover {
+     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+     width: 42%;
+     transform: scale(1.05);
+ }
+ 
+  #cardDesk .container {
+     padding: 2px 16px;
+ } 
+
+ #bottomright{
+    color: aliceblue;
+    position: absolute;
+    right: 10%;
+    top: 20%;
+ }
+#cardtopic1{
+    font-family: "Times New Roman", Times, serif;
+    font-size: 5em;
+    color: aliceblue;
+    -webkit-animation: mycard 10s 1; /* Safari 4.0 - 8.0 */
+    animation: mycard 10s 10;
+    animation-direction: alternate;
+   
+}
+#cardtopic2{
+    font-family: "Times New Roman", Times, serif;
+    font-size: 5em;
+    color: aliceblue;
+   
+   
+}
+#txt{
+margin-left: 90%}
+@-webkit-keyframes mycard {
+    from {left: 100px; color: rgb(196,199,199);}
+    to {right: 300px; color:rgb(165, 165, 165);}
+}
+
+@keyframes mycard {
+    from {color: rgb(224, 17, 45); }
+    to {color: rgb(140, 10, 10);}
+}
