before drag and drop

--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -9,7 +9,7 @@
                       <div class="frontside">
                           <div class="card">
                               <div class="card-body text-center">
-                                  <p><img class="img-fluid" src="https://placeimg.com/201/201/people" alt="card image"></p>
+                                  <p><img class="img-fluid" src="https://www.holidayextras.co.uk/images/holidayextras/insurance/annual-trip-v2.png" alt="card image"></p>
                                   <h4 class="card-title">Annual Trip</h4>
                                   <p class="card-text">This is basic card with image on top, title, description and button.</p>
                                   <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
@@ -50,8 +50,8 @@
                     <div class="frontside">
                         <div class="card">
                             <div class="card-body text-center">
-                                <p><img class="img-fluid" src="https://placeimg.com/201/201/people" alt="card image"></p>
-                                <h4 class="card-title">Annual Trip</h4>
+                                <p><img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQODz46QcpMEhaXyAhBltkKD6YOINIOHWmmVl03w3PMcLFbwAwKgQ" alt="card image"></p>
+                                <h4 class="card-title">Annual Blood Donation</h4>
                                 <p class="card-text">This is basic card with image on top, title, description and button.</p>
                                 <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
                             </div>
@@ -60,7 +60,7 @@
                     <div class="backside">
                         <div class="card">
                             <div class="card-body text-center mt-4">
-                                <h4 class="card-title">Trip Info</h4>
+                                <h4 class="card-title"> Info</h4>
                                 <p class="card-text">This is basic card with image on top, title, description and button.
                                   This is basic card with image on top, title, description and button.This is basic card with image on top,
                                    title, description and button.</p>
@@ -91,8 +91,8 @@
                     <div class="frontside">
                         <div class="card">
                             <div class="card-body text-center">
-                                <p><img class="img-fluid" src="https://placeimg.com/201/201/people" alt="card image"></p>
-                                <h4 class="card-title">Annual Trip</h4>
+                                <p><img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTchsJLjnOpsI1AhzeFwTUG5NtiUhFQSSl_Czw1WnDRCkI2f0z7Ww" alt="card image"></p>
+                                <h4 class="card-title">Cricket Match</h4>
                                 <p class="card-text">This is basic card with image on top, title, description and button.</p>
                                 <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
                             </div>
@@ -101,7 +101,7 @@
                     <div class="backside">
                         <div class="card">
                             <div class="card-body text-center mt-4">
-                                <h4 class="card-title">Trip Info</h4>
+                                <h4 class="card-title"> Info</h4>
                                 <p class="card-text">This is basic card with image on top, title, description and button.
                                   This is basic card with image on top, title, description and button.This is basic card with image on top,
                                    title, description and button.</p>
@@ -129,8 +129,8 @@
         <!-- ./Team member -->
          
 
-         <a href="pastevent/event" class="">More</a>
-
+         <a href="pastevent/event" class=""><i class="fa fa-info-circle fa-3x" aria-hidden="true"></i>More</a>
+        
       </div>
   </div>
 </section>
