--- a/src/app/pastevent/imageupload/imageupload.component.html
+++ b/src/app/pastevent/imageupload/imageupload.component.html
@@ -14,7 +14,7 @@
 <div class="fff">
   <li class="nav-item">
 
-    <a class="nav-link" href="pastevent/imageview/2"> <button  class="btn" class="btn btn-outline-success">Image Gallery</button></a>
+    <a class="nav-link" href="pastevent/imageview/2"> <button  class="btn" class="btn btn-outline-dark">Image Gallery</button></a>
 
   </li>
   <div class="container">
