--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -9,20 +9,23 @@
 <li class="nav-item">
   <div class="row">
     <div class="col-1">
-      <a class="nav-link" href="pastevent/imageupload"><button  class="btn" class="btn-large btn-submit" class="btn btn-outline-success">Upload
+      <a class="nav-link" href="pastevent/imageupload"><button  class="btn" class="btn-large btn-submit" class="btn btn-outline-dark">Upload
           Image</button></a>
 
     </div>
    
     <div class="col-10"></div>
     <div class="col-1">
-      <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+      <div  class="btn-group" role="group" aria-label="Button group with nested dropdown">
         <div class="btn-group" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Menu
           </button>
           <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
             <a class="dropdown-item" href="pastevent/imageview/3"> Blood Donation</a>
+
+            
+
             <a class="dropdown-item" href="pastevent/imageview/2"> Cricket Match</a>
             <a class="dropdown-item" href="pastevent/budget">Budget</a>
           </div>
