--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -88,7 +88,8 @@
       <div class="btn-group" role="group">
         <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Menu
+          <i class="fa fa-bars" aria-hidden="true">Menu</i>
+
         </button>
         <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
           <a class="dropdown-item" href="pastevent/imageview/2"> Gallery Memories</a>
