--- a/src/app/pastevent/imageupload/imageupload.component.html
+++ b/src/app/pastevent/imageupload/imageupload.component.html
@@ -14,7 +14,7 @@
 <div class="fff">
   <li class="nav-item">
 
-    <a class="nav-link" href="pastevent/imageview/2"> <button  class="btn" class="btn btn-outline-dark">Image Gallery</button></a>
+    <a class="nav-link" href="pastevent/imageview/2"> <button class="btn" class="btn btn-outline-dark">Image Gallery</button></a>
 
   </li>
   <div class="container">
@@ -85,16 +85,14 @@
                         <div class="image-upload-wrap">
                             <input class="file-upload-input" type='file' onchange="readURL(this);" formControlName="Image" #Image accept="image/*" (change)="onFileChange($event.target.files)" />
                             <div class="drag-text">
-                              <h3>Drag and drop a file or select add Image</h3>
+                              <h3>Drag and drop Image</h3>
                             </div>
                           </div>
                      </div>
 
 
-
-
                       <div class=" form-group">
-                        <button type="submit" class="btn"  [disabled]="!imageuploadForm.valid">submit</button>
+                        <button type="submit" class="btn" class="btn btn-outline-dark"  [disabled]="!imageuploadForm.valid">submit</button>
             
                       </div>
                     </form>
