--- a/src/app/events/CricketMatch/details-view/details-view.component.html
+++ b/src/app/events/CricketMatch/details-view/details-view.component.html
@@ -1,5 +1,5 @@
 
-<app-sidenavbar></app-sidenavbar>
+<app-nav-bar></app-nav-bar>
 <div class="container">
         <br>
           <h2>Details Of Match</h2>
