--- a/src/app/events/CricketMatch/employee-page/employee-page.component.html
+++ b/src/app/events/CricketMatch/employee-page/employee-page.component.html
@@ -3,8 +3,7 @@
 
 
 
-
-<app-sidenavbar></app-sidenavbar>
+<app-nav-bar></app-nav-bar>
 <div id="back">
         
     <div *ngIf="!IsLogin" class="wrapper fadeInDown col-md-12 container">
