--- a/src/app/events/CricketMatch/team-rc-view/team-rc-view.component.html
+++ b/src/app/events/CricketMatch/team-rc-view/team-rc-view.component.html
@@ -1,5 +1,4 @@
-
-<app-sidenavbar></app-sidenavbar>
+<app-nav-bar></app-nav-bar>
 <div class="row"> 
   <div class="col-md-offset-10 col-md-2">
     <h2>Team Details</h2>
