--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -1,5 +1,5 @@
 
-<app-header2></app-header2>
+<app-nav-bar></app-nav-bar>
 
 <!-- <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
