--- a/src/app/profile/admin-page/admin-page.component.html
+++ b/src/app/profile/admin-page/admin-page.component.html
@@ -1,4 +1,4 @@
-<app-logged-header></app-logged-header>
+<app-nav-bar></app-nav-bar>
 
 <div class="form-row">
     <div class="form-group col-md-1">
