--- a/src/app/task/add-info/add-info.component.html
+++ b/src/app/task/add-info/add-info.component.html
@@ -1,6 +1,4 @@
-
-<!-- <app-logged-header></app-logged-header> -->
-<app-loging-header></app-loging-header>
+<app-nav-bar></app-nav-bar>
 
 
 <section class="testimonial py-5" id="testimonial">
