--- a/src/app/events/CricketMatch/front-page/front-page.component.html
+++ b/src/app/events/CricketMatch/front-page/front-page.component.html
@@ -1,5 +1,5 @@
 
-<app-sidenavbar></app-sidenavbar>
+<app-nav-bar></app-nav-bar>
 <div class="row no-gutters">
   <div class="col-2"></div>
   <div class="col-8">
