--- a/src/app/events/event-home-page/event-home-page.component.html
+++ b/src/app/events/event-home-page/event-home-page.component.html
@@ -1,5 +1,4 @@
-
-<app-header2></app-header2>
+<app-nav-bar></app-nav-bar>
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
