--- a/src/app/pastevent/annual-trip/annual-trip.component.html
+++ b/src/app/pastevent/annual-trip/annual-trip.component.html
@@ -1,4 +1,4 @@
-<app-header1></app-header1>
+<app-nav-bar></app-nav-bar>
 <!-- <app-logged-header></app-logged-header> -->
 <p>
   annual-trip works!
