--- a/src/app/pastevent/cricketinfo/cricketinfo.component.html
+++ b/src/app/pastevent/cricketinfo/cricketinfo.component.html
@@ -1,4 +1,4 @@
-<app-header1></app-header1>
+<app-nav-bar></app-nav-bar>
 <!-- <app-logged-header></app-logged-header> -->
 <body>
   cricketinfo works!
