--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -1,5 +1,5 @@
 
-<app-header1></app-header1>
+<app-nav-bar></app-nav-bar>
 <section id="team" class="pb-5">
   <div class="container">
       <h5 class="section-title h1">Events</h5>
