--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -4,7 +4,7 @@
 
 <!-- ########################### NEW PART  1   ##################################  -->
 
-<app-header1></app-header1>
+<app-nav-bar></app-nav-bar>
 <!-- <app-logged-header></app-logged-header> -->
 
 <li class="nav-item">
