--- a/src/app/pastevent/sidebar/sidebar.component.html
+++ b/src/app/pastevent/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<app-header1></app-header1>
+<app-nav-bar></app-nav-bar>
 <!-- <app-logged-header></app-logged-header> -->
 <div class="form-row">
   <div class="form-group col-md-2">
