--- a/src/app/profile/Employee/employee-details/employee-details.component.html
+++ b/src/app/profile/Employee/employee-details/employee-details.component.html
@@ -1,6 +1,4 @@
-<app-logged-header></app-logged-header>
-
-
+<app-nav-bar></app-nav-bar>
 
 <!-- <section class="testimonial py-5 container" id="testimonial">
     <div class="container">
