--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -1,4 +1,4 @@
-
+<app-nav-bar></app-nav-bar>
 <!-- <section class="testimonial py-5 container" id="testimonial">
     <div class="container">
         <div class="row ">
@@ -50,7 +50,7 @@
     </div>
   </section>
    -->
-   <app-logged-header></app-logged-header>
+   
    <!-- <div class="row">
     <div class="col-8">
 
