--- a/src/app/task/my-task/my-task.component.html
+++ b/src/app/task/my-task/my-task.component.html
@@ -1,5 +1,4 @@
-<!-- <app-logged-header></app-logged-header> -->
-<app-loging-header></app-loging-header>
+<app-nav-bar></app-nav-bar>
 
 <div class="container">
     <div class="row ">
