--- a/src/app/task/view-task/view-task.component.html
+++ b/src/app/task/view-task/view-task.component.html
@@ -1,5 +1,4 @@
-<!-- <app-logged-header></app-logged-header> -->
-<app-loging-header></app-loging-header>
+<app-nav-bar></app-nav-bar>
 
 
    <div class=" my-3 p-3 rounded box-shadow" >
