--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+
 <div id="backcolor" class="row">
 
   <div class="col-10">
@@ -10,7 +10,7 @@
       <div id="dateplace">
        <div class="alert alert-success"> <h3  > 2018\04\04</h3>
         
-        <h3>place ==> {{event.name}}</h3>
+        <h3>place ==> {{event.eventName}}</h3>
         </div>
       </div>
       <div class="card-body">
