--- a/src/app/pastevent/sidebar/sidebar.component.html
+++ b/src/app/pastevent/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
           <br><br>
           <div id="topicside">Latest Topics </div>
           <div *ngFor="let e of event">
-            <a [class.click]="(ClickId==e.id)" (click)=gotoEvent(e.id)>{{e.username}}</a>
+            <a [class.click]="(ClickId==e.id)" (click)=gotoEvent(e.id)>{{e.eventName}}</a>
 
           </div>
 
