--- a/src/app/profile/Employee/change-position/change-position.component.html
+++ b/src/app/profile/Employee/change-position/change-position.component.html
@@ -26,8 +26,8 @@
               <th>Project</th>
               
               <th>Position</th>
-              <th></th>
-              <th></th>
+              <th>Department</th>
+              <th>Active/Deactive</th>
             
               <th *ngIf="isAdmin"></th>
              
@@ -37,22 +37,49 @@
               <td id="zoom3" > <img [src]= "ImageUrl+i.empProfilePicture" id="profilePicture" width="100px" ></td>
               <td>{{i.empName}}</td>
               <td>{{i.empEmail}}</td>
-              <td>{{i.projectName}}</td>            
-              <td>{{i.empPosition}}</td>
-              <td id="zoom3" ><button type="button" id="details" class="btn  btn-default" >Change</button></td>
-               <td >
-                <div class="form-group col-md-6">
-                          
-                  <select class="form-control"  placeholder="Department" id="department">
-                          <option value="" selected disabled hidden>Departments</option>
-                          <option (change)=changeposition(p.positionId)  [value]="p.positionId" *ngFor="let p of position">{{p.positionName}}</option>
-                      </select>
-        </div>
+              <td>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{i.projectName}}
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
+                    <a  *ngFor="let p of projects" class="dropdown-item" (click)="changedetails(i.empEmail,'','',p.prId)"> {{p.projectName}}</a>
+                  
+                  </div>
+                </div>
+               </td>           
+             
+               <td>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{i.empPosition}}
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
+                    <a  *ngFor="let p of position" class="dropdown-item" (click)="changedetails(i.empEmail,p.positionId,'','')"> {{p.positionName}}</a>
+                  
+                  </div>
+                </div>
                </td>
+
+               <td>
+                <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{i.empDepartment}}
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"  >
+                    <a  *ngFor="let d of departments" class="dropdown-item" (click)="changedetails(i.empEmail,'',d.dprtId,'')"> {{d.dprtName}}</a>
+                  
+                  </div>
+                </div>
+               </td>
+               <td id="btn" *ngIf="(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn" (click)=statechange(i.empEmail,0)>For Deactive</button></td>
+               <td id="btn" *ngIf="!(i.isActive)&&(Loading!=i.empEmail)" id="zoom3" ><button type="button" id="delete" class="btn" (click)=statechange(i.empEmail,1)>For Active</button></td>
+               <td id="btn" *ngIf="(Loading==i.empEmail)"><div ><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" ></div>
+       
+              
               <td id="zoom3" ><button type="button" id="details" class="btn  btn-default" (click)=detailsemployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/details.png" alt="Cinque Terre" ></button></td>
-                    <td id="zoom3" ><button type="button" id="update" class="btn  btn-success" (click)=updateEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/edit.png" alt="Cinque Terre" ></button></td>
-                    <td id="zoom3" *ngIf="isAdmin"><button type="button" id="delete" class="btn  btn-danger" (click)=deActiveEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/delete.png" alt="Cinque Terre" ></button></td>
-                 
+                    <td id="btn" id="zoom3" ><button type="button" id="update" class="btn  btn-success" (click)=updateEmployee(i.empId)><img id="loadImage" style=" width : 15px;" class="card-img-top" src="assets/edit.png" alt="Cinque Terre" ></button></td>
+                   
              
             </tr>
             </tbody>
