--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -1,137 +1,33 @@
-<section id="team" class="pb-5">
-  <div class="container">
-      <h5 class="section-title h1">Events</h5>
-      <div class="row">
-          <!-- Team member -->
-          <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                  <div class="mainflip">
-                      <div class="frontside">
-                          <div class="card">
-                              <div class="card-body text-center">
-                                  <p><img class="img-fluid" src="https://www.holidayextras.co.uk/images/holidayextras/insurance/annual-trip-v2.png" alt="card image"></p>
-                                  <h4 class="card-title">Annual Trip</h4>
-                                  <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                  <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="backside">
-                          <div class="card">
-                              <div class="card-body text-center mt-4">
-                                  <h4 class="card-title">Trip Info</h4>
-                                  <p class="card-text">This is basic card with image on top, title, description and button.
-                                    This is basic card with image on top, title, description and button.This is basic card with image on top,
-                                     title, description and button.</p>
-                                  <ul class="list-inline">
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/1">
-                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
-                                        </a>
-                                    </li>
-                                    
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
-                                        </a>
-                                    </li>
-                                  </ul>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <!-- ./Team member -->
-           <!-- Team member -->
-           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                <div class="mainflip">
-                    <div class="frontside">
-                        <div class="card">
-                            <div class="card-body text-center">
-                                <p><img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQODz46QcpMEhaXyAhBltkKD6YOINIOHWmmVl03w3PMcLFbwAwKgQ" alt="card image"></p>
-                                <h4 class="card-title">Annual Blood Donation</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="backside">
-                        <div class="card">
-                            <div class="card-body text-center mt-4">
-                                <h4 class="card-title"> Info</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and button.
-                                  This is basic card with image on top, title, description and button.This is basic card with image on top,
-                                   title, description and button.</p>
-                                <ul class="list-inline">
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/2">
-                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
-                                        </a>
-                                    </li>
-                                    
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ./Team member -->
-         <!-- Team member -->
-         <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                <div class="mainflip">
-                    <div class="frontside">
-                        <div class="card">
-                            <div class="card-body text-center">
-                                <p><img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTchsJLjnOpsI1AhzeFwTUG5NtiUhFQSSl_Czw1WnDRCkI2f0z7Ww" alt="card image"></p>
-                                <h4 class="card-title">Cricket Match</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and button.</p>
-                                <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-bandcamp "></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="backside">
-                        <div class="card">
-                            <div class="card-body text-center mt-4">
-                                <h4 class="card-title"> Info</h4>
-                                <p class="card-text">This is basic card with image on top, title, description and button.
-                                  This is basic card with image on top, title, description and button.This is basic card with image on top,
-                                   title, description and button.</p>
-                                <ul class="list-inline">
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="pastevent/imageview/3">
-                                            <i class="fa fa-camera-retro fa-1x"><a > Gallery</a></i>
-                                        </a>
-                                    </li>
-                                    
-                                    <li class="list-inline-item">
-                                        <a class="social-icon text-xs-center" target="_blank" href="#">
-                                            <i (click)=event() class="fa fa-angle-double-down" aria-hidden="true">More</i>
-                                        </a>
-                                    </li>
-                                    
-                                    
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ./Team member -->
-         
-
-         <a href="pastevent/event" class=""><i class="fa fa-info-circle fa-3x" aria-hidden="true"></i>More</a>
-        
+<app-logged-header></app-logged-header>
+<div class="card-deck">
+    <div class="card">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Last updated 3 mins ago</small>
+      </div>
+    </div>
   </div>
-</section>
-<!-- Team -->
