--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -4,12 +4,12 @@
 
     <div class="card">
       <!-- <h2 id="topicname">{{event.name}}</h2> -->
-      <img id="topicImage" class="card-img-top" src="http://static1.squarespace.com/static/56bab2bbf8baf30193d93777/t/56babb138259b5fc1ed7470d/1470952559453/"
+      <img id="topicImage" class="card-img-top" src=""
         alt="Card image cap">
       <div id="dateplace">
        <div class="alert alert-success"> <h3  > 2018\04\04</h3>
         
-        <h3>place ==> {{event.name}}</h3>
+       
         </div>
       </div>
       <div class="card-body">
@@ -61,10 +61,10 @@
           content.</p>
         <div class="row">
           <div class="col-6">
-            <div class="embed-responsive embed-responsive-16by9" id="topicVideo">
+            <!-- <div class="embed-responsive embed-responsive-16by9" id="topicVideo">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/slp-jZZt7ik?ecver=1"
                 allowfullscreen></iframe>
-            </div>
+            </div> -->
           </div>
           <div class="col-6">
               <ul class="list-group list-group-flush">
