--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -7,7 +7,7 @@
       <img id="topicImage" class="card-img-top" src=""
         alt="Card image cap">
       <div id="dateplace">
-       <div class="alert alert-success"> <h3  > 2018\04\04</h3>
+       <div class="alert alert-success"> <h3  >hi</h3>
         
        
         </div>
@@ -47,11 +47,8 @@
           </div>
           <div class="col-6">
             <p>
-
-              A travel agent's role is to help people plan, choose and arrange their holiday.
-              They will usually work to a budget set out by whoever is planning the holiday.
-              They also offer advice and opinions on where to go and local tourist attractions,
-              events and customs.</p>
+    lkkkkkkkkkkkkkkkkkkkkkkkk
+             </p>
 
           </div>
         </div>
