--- a/src/app/task/add-info/add-info.component.html
+++ b/src/app/task/add-info/add-info.component.html
@@ -5,18 +5,7 @@
 <section class="testimonial py-5" id="testimonial">
     <div class="container">
         <div class="row ">
-            <div class="col-md-4 py-5 text-white text-center " id="sideA">
-                <div class="sideA">
-                    <div class="card-body">
-                        <img src="assets/_image/cslogo.png" style="width:30%">
-                        
-                        <h2 class="py-3">Assign Tasks</h2>
-                        <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.
-  
-  </p>
-                    </div>
-                </div>
-            </div>
+            
   
   
             <div class="col-md-8 py-5 border" id="formV">
@@ -68,8 +57,15 @@
                                 </div>
                     </div>
                     
+                    <!-- upload file -->
+                    <div class="form-group">
+                            <label for="file">Choose File</label>
+                            <input type="file"
+                                   id="file"
+                                   (change)="handleFileInput($event.target.files)">
+                        </div>
                 
-                    
+                    <!-- end uploading -->
                     <div class="form-row">
                         <div class="form-group">
                                   <div class="btn-group" role="group" aria-label="Basic example">
