--- a/src/app/task/addtask/addtask.component.html
+++ b/src/app/task/addtask/addtask.component.html
@@ -1,5 +1,4 @@
 
-<app-logged-header></app-logged-header>
 <section class="testimonial py-5" id="testimonial">
     <div class="container">
         <div class="row ">
@@ -24,7 +23,12 @@
                 </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <input type="text" class="form-control"  placeholder="Responsible RC member" formControlName="EmployeeEmpId" id="EmployeeEmpId" [(ngModel)]="goalText">
+                          <!-- <input type="text" class="form-control"  placeholder="Responsible RC member" formControlName="EmployeeEmpId" id="EmployeeEmpId" [(ngModel)]="goalText"> -->
+                          <span class="sp1">Responsible RC</span>
+                          
+                              <div *ngFor="let j of emailFormArray;">
+                                  {{j}}
+                              </div>
                           
                           <!-- <form autocomplete="off" novalidate [formGroup]="employeeForm"(ngSubmit)="SelectEmployee(employeeForm.value)">
 
@@ -35,7 +39,6 @@
                                 Employee List
                               </button-->
                               <button class="btn btn-link btn-sm" (click)="open(content)"> Employee List</button>
- 
                               <ng-template #content let-c="close" let-d="dismiss">
                                   <div class="modal-header">
                                     <h4 class="modal-title" id="modal-basic-title">Employee list</h4>
@@ -43,20 +46,19 @@
                                       <span aria-hidden="true">&times;</span>
                                     </button>
                                   </div>
+                                  <!-- employee list -->
                                   <div class="modal-body">
                                     <table class="table table-borderless">
-                                    <tr *ngFor="let i of result;">
-                                    <td><input type="checkbox"></td>
-                                      <td><button class="btn btn-light" (click)="selectEmp(i.empId,i.empName)">{{i.empName}}</button></td>
+                                        <tr *ngFor="let i of result;" class="form-check">
+                                      
+                                    <td><input type="checkbox" class="form-check-input" (change)="onChange(i.empId,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
+                                    <!-- <td><button class="btn btn-light" (click)="selectEmp(i.empId,i.empName)">{{i.empName}}</button></td> -->
                                      
                                     </tr>
-                                    </table>
-                                    
-                  
-                                         
-                  
-                  
-                                  </div>
+                                    </table>                              
+                                    </div>
+
+                                     <!-- end -->
                                   <div class="modal-footer">
                                       <small class="text-muted">
                                          
